# dashboardstudio

./: .env-ai-analyst.example  .env-bff.example  .gitignore  CLAUDE.md  GEMINI.md  PRD.md  PoC – Flujos de Integración (Data – Services).pptx  README.md  biportal_full_backup.json  canvas_diff.txt  docker-compose.yaml  ~$PoC – Flujos de Integración (Data – Services).pptx
 .planning/: ROADMAP.md
.claude/: settings.local.json
.codex/: config.toml  gsd-file-manifest.json  gsd-install-state.json  hooks.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.playwright-mcp/: Gestion-de-Proyectos.ddl  page-2026-05-14T04-18-08-264Z.yml  page-2026-05-14T04-18-54-290Z.yml  page-2026-06-01T23-49-11-501Z.yml
ai-analyst/: Dockerfile  READ.md  README.md  pyproject.toml
ai-analyst/app/: agent.py  main.py
ai-analyst/app/core/: config.py
ai-analyst/app/tools/: cube.py  skills.py
ai-analyst/scratch/: test_agent.py  test_custom_mappings.py  test_query.py
backend/: .env  .env.example  Dockerfile  README.md  check_tables.py  check_user_exists.py  patch_add_graphql_tool.py  patch_rest_api_tool.py  pyproject.toml  scratch_find_canvas_listeners.py  scratch_find_export.py  scratch_find_export_vue.py  scratch_find_expose.py  scratch_find_node_add.py  scratch_find_selected_node.py  scratch_search_dirty.py  scratch_view_flow_script.py  scratch_view_flow_view.py  seed_note_tool.py  test_api.py  test_history_api.py  test_metadata_api.py  test_monitoring.py  test_order.py  test_query.py  update_db_phase25.py
bff/: Dockerfile  (+3 more)
(+731 files in other folders)
