[project]
name = "ai-analyst"
version = "0.1.0"
description = "AI Analyst microservice — Google ADK + Gemini"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.1.0",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
